--- a/api/respapi.eshop/appsettings.json
+++ b/api/respapi.eshop/appsettings.json
@@ -8,7 +8,6 @@
   "Tokenkey": "super secret unguessable key",
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=DESKTOP-J212857;Database=projectEshop10;TrustServerCertificate=True;Trusted_Connection=True;"
+    "DatabaseConnection": "Server=DESKTOP-J212857;Database=projectEshop;TrustServerCertificate=True;Trusted_Connection=True;"
   }
 }
-
