--- a/ui/ui/package.json
+++ b/ui/ui/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.0",
+    "@angular/animations": "^16.2.5",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
@@ -25,6 +25,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^11.0.2",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
