--- a/ui/ui/package.json
+++ b/ui/ui/package.json
@@ -23,11 +23,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^11.0.2",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.31",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
